[package]
name = "spymux"
version = "0.1.0"
description = "A centralized view for all of your tmux panes"
authors = ["Liam <liam@scalzulli.com>"]
license = "CC0-1.0"
homepage = "https://github.com/terror/spymux"
repository = "https://github.com/terror/spymux"
edition = "2024"
exclude = ["/screenshot.png"]
categories = ["development-tools"]
keywords = ["productivity", "tmux"]
resolver = "2"

[dependencies]
ansi-to-tui = "7.0.0"
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
unicode-width = "0.2.0"

[lints.rust]
mismatched_lifetime_syntaxes = "allow"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[lints.clippy]
all = { level = "deny", priority = -1 }
arbitrary-source-item-ordering = "deny"
enum_glob_use = "allow"
ignore_without_reason = "allow"
needless_pass_by_value = "allow"
pedantic = { level = "deny", priority = -1 }
similar_names = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
type_complexity = "allow"
undocumented_unsafe_blocks = "deny"
unnecessary_wraps = "allow"
wildcard_imports = "allow"
